turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:55: error: not enough arguments for method apply: (i: Int)Array[Array[Int]] in class Array.
Unspecified value parameter i.
	rule()
            ^Turmite:60: error: not enough arguments for method init: (colors: Array[java.awt.Color])Unit.
Unspecified value parameter colors.
		init();
                    ^